# src/routes/battle/player.rs
@@ -14,11 +14,15 @@ use tracing::instrument;
 
 use uuid::Uuid;
 
-use crate::app::{AppError, AppJson, AppState, Payload, error::AppErrorKind};
+use crate::{
+    app::{AppError, AppJson, AppState, Payload, error::AppErrorKind},
+    auth::api_key::ServerAuthentication,
+};
 
 /// Updates the placement of a player for a given match.
 #[instrument(skip(state))]
 pub async fn update(
+    _auth_guard: ServerAuthentication,
     Path((uuid, short_id)): Path<(Uuid, String)>,
     State(state): State<AppState>,
     Payload(request): Payload<UpdatePlayerPlacementRequest>,
